--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -16,42 +16,56 @@
     "contactUs": "Contact Us"
   },
   "services": {
-    "title": "Our Services",
-    "subtitle": "Comprehensive logistics solutions tailored to your needs",
-    "lcl": {
-      "title": "LCL Services",
-      "description": "HAIXUN operate own consolidation service on many trade routes. HAIXUN Provide complete transparency of all the pricing at the origin, destination and ocean freight charges..."
-    },
-    "fcl": {
-      "title": "FCL Services",
-      "description": "HAIXUN has own fleet of containers including special equipment's to accommodate special requirements of customers and specializes in many trade lanes."
-    },
-    "warehouse": {
-      "title": "Warehouse Management",
-      "description": "HAIXUN is well equipped to handle the warehousing of various commodities including cold storage with cutting edge technology."
-    },
-    "project": {
-      "title": "Project Logistics",
-      "description": "With Dedicated project division having experts in the field inherited from major project handlers."
-    },
-    "air": {
-      "title": "Air Shipments",
-      "description": "HAIXUN can provide customized sea-air & air-sea options to meet customer's deadline/timeliness and achieve cost savings."
-    },
-    "customs": {
-      "title": "Customs Declaration & Inspection",
-      "description": "As one of the leading custom clearing agents, we ensure that all clearance formalities are done in a smooth and easy manner."
-    },
-    "import": {
-      "title": "Import",
-      "description": "Comprehensive import handling services with warehouse and yard facilities, crane and container handling equipment's."
-    },
-    "consolidation": {
-      "title": "LCL Consolidation",
-      "description": "Export Direct Consol to various destinations including Singapore, Colombo, Karachi, and connecting to major hubs worldwide."
-    },
-    "readMore": "Read more"
+  "title": "Our Services",
+  "subtitle": "Comprehensive logistics solutions tailored to your needs",
+
+  "lcl": {
+    "title": "LCL Services",
+    "description": "HAIXUN operates its own consolidation services on multiple trade routes, providing complete transparency in pricing across origin, destination, and ocean freight charges."
   },
+
+  "fcl": {
+    "title": "FCL Services",
+    "description": "HAIXUN owns a fleet of containers, including special equipment to accommodate customers’ unique requirements, specializing in multiple global trade lanes."
+  },
+
+  "warehouse": {
+    "title": "Warehouse Management",
+    "description": "Equipped with state-of-the-art facilities, HAIXUN efficiently manages warehousing operations for various commodities, including cold storage with advanced technology."
+  },
+
+  "project": {
+    "title": "Project Logistics",
+    "description": "With a dedicated project division comprising industry experts, HAIXUN ensures the safe and timely handling of complex, large-scale project cargo."
+  },
+
+  "air": {
+    "title": "Air Shipments",
+    "description": "Offering customized Sea-Air and Air-Sea options, HAIXUN helps clients meet tight deadlines while optimizing logistics costs through flexible multimodal solutions."
+  },
+
+  "customs": {
+    "title": "Customs Declaration & Inspection",
+    "description": "As a leading customs clearing agent, HAIXUN ensures smooth and efficient completion of all customs formalities and inspections with minimal delays."
+  },
+
+  "oog": {
+    "title": "OOG Shipments",
+    "description": "Services offered include cargo loading, lashing, survey arrangements, and inter-island movement to major ports—handled by a team experienced in out-of-gauge cargo."
+  },
+
+  "import": {
+    "title": "Import",
+    "description": "Comprehensive import handling services supported by warehouses, yards, cranes, and advanced container handling equipment ensure seamless operations."
+  },
+
+  "consolidation": {
+    "title": "LCL Consolidation",
+    "description": "Direct export consolidations to key destinations such as Singapore, Colombo, and Karachi, with extended connections to major global hubs."
+  },
+
+  "readMore": "Read More"
+},
   "about": {
     "title": "About Haixun Global",
     "subtitle": "30+ Years of Logistics Excellence",
